[package]
description = "Pallet for CERES liquidity locker."
authors = [
    "Jovan Milosevic <jovan.milosevic@cerestoken.io>, Danijel Radulovic Ltd. <danijel.radulovic@cerestoken.io>",
]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "ceres-liquidity-locker"
version = "1.2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
technical = { path = "../technical", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
permissions = { path = "../permissions", default-features = false }
hex-literal = { workspace = true }

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
currencies = { workspace = true }
demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
ceres-liquidity-locker = { path = ".", default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk", default-features = false }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }
price-tools = { path = "../price-tools" }

[features]
default = ['std']

std = [
    "codec/std",
    "dex-manager/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
]

try-runtime = ["frame-support/try-runtime"]
