[package]
name = "ceres-presale"
version = "0.1.0"
authors = ["Jovan Milošević <ujazaconje@gmail.com>"]
description = 'Pallet for Ceres Presale'
homepage = 'https://cerestoken.io'
licence = 'MIT'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
orml-currencies = { default-features = false, version = '0.4.0' }
orml-traits = { default-features = false, version = '0.4.0' }
sp-runtime = { default-features = false, version = "3.0.0" }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'orml-currencies/std',
    'sp-runtime/std'
]
runtime-benchmarks = ["frame-benchmarking"]