[package]
description = "Pallet for CERES staking."
authors = ["Danijel Radulovic Ltd. <danijel.radulovic@cerestoken.io>"]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "ceres-staking"
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
common = { path = "../../common", default-features = false }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
technical = { path = "../technical", default-features = false }
hex-literal = "0.4.1"

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
permissions = { path = "../permissions" }
technical = { path = "../technical", default-features = false }

[features]
default = ["std"]

std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    'serde/std',
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "common/std",
    "permissions/std",
    "technical/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
