[package]
description = "Pallet for CERES token locker."
authors = ["Danijel Radulovic <danijel.radulovic@cerestoken.io>"]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "ceres-token-locker"
version = "1.2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
technical = { path = "../technical", default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
hex-literal = { workspace = true }

[dev-dependencies]
assets = { path = "../assets" }
ceres-liquidity-locker = { path = "../ceres-liquidity-locker" }
common = { path = "../../common", features = ["test"] }
currencies = { workspace = true }
demeter-farming-platform = { path = "../demeter-farming-platform" }
dex-manager = { path = "../dex-manager" }
pallet-balances = { workspace = true }
pool-xyk = { path = "../pool-xyk" }
pswap-distribution = { path = "../pswap-distribution" }
sp-io = { workspace = true }
permissions = { path = "../permissions" }
tokens = { workspace = true }

[features]
default = ['std']

std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "common/std",
    "technical/std",
    "assets/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
