[package]
description = "Pallet for DEMETER farming platform."
authors = [
    "Danijel Radulovic Ltd. <danijel.radulovic@cerestoken.io>, Jovan Milosevic <jovan.milosevic@cerestoken.io>",
]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "demeter-farming-platform"
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
pswap-distribution = { path = "../pswap-distribution", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
technical = { path = "../technical", default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
permissions = { path = "../permissions", default-features = false }
hex-literal = { workspace = true }

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
demeter-farming-platform = { path = ".", default-features = false }
currencies = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
tokens = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
permissions = { path = "../permissions" }
technical = { path = "../technical" }
pool-xyk = { path = "../pool-xyk" }
pswap-distribution = { path = "../pswap-distribution" }
multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }
dex-manager = { path = "../dex-manager" }
vested-rewards = { path = "../vested-rewards" }

[features]
default = ["std"]

std = [
    "codec/std",
    "dex-manager/std",
    "frame-support/std",
    "frame-system/std",
    "multicollateral-bonding-curve-pool/std",
    "permissions/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "technical/std",
    "trading-pair/std",
    "pswap-distribution/std",
    "common/std",
    "ceres-liquidity-locker/std",
]

runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
