[package]
description = 'Pallet for aggregation of available liquidity sources for other pallets and external api.'
version = '0.1.0'
name = 'dex-api'
edition = '2018'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
assets = { path = "../assets", default-features = false }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
common = { path = "../../common", default-features = false }
currencies = { version = "0.4", package = "orml-currencies", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
pallet-balances = { version = "3", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
sp-arithmetic = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
tokens = { version = "0.4", package = "orml-tokens", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
traits = { version = "0.4", package = "orml-traits", default-features = false }
pallet-timestamp = { version = "3", default-features = false }

[dev-dependencies]
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
hex-literal = "0.3.1"
sp-core = { version = "3", default-features = false }
sp-io = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk" }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'currencies/std',
    'tokens/std',
    'traits/std',
]
