[package]
description = 'Pallet for aggregation of available liquidity sources for other pallets and external api.'
version = '0.1.0'
name = 'dex-api'
edition = '2021'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
assets = { path = "../assets", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
common = { path = "../../common", default-features = false }
currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
sp-arithmetic = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
strum = { version = "0.25.0", default-features = false }
tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

[dev-dependencies]
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
hex-literal = "0.4.1"
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk" }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }

[features]
default = ['std']
std = [
    "common/std",
    "codec/std",
    "scale-info/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "currencies/std",
    "tokens/std",
    "traits/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]

ready-to-test = ["common/ready-to-test"]
