[package]
description = 'Pallet for aggregation of available liquidity sources for other pallets and external api.'
version = '0.1.0'
name = 'dex-api'
edition = '2021'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
common = { path = "../../common", default-features = false }
currencies = { workspace = true, default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
pallet-balances = { workspace = true, default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
strum = { workspace = true, default-features = false }
tokens = { workspace = true, default-features = false }
traits = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
log = { workspace = true }

[dev-dependencies]
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
hex-literal = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk" }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }

[features]
default = ['std']
std = [
    "common/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "currencies/std",
    "tokens/std",
    "traits/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
