[package]
description = 'Pallet for creation of DEXes, managing their specific parameters and ownership.'
authors = ["Maxim Surkov <modbrin@gmail.com>"]
version = '0.1.0'
name = 'dex-manager'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
pallet-balances = { version = "3", default-features = false }
sp-arithmetic = { version = "3", default-features = false }
sp-io = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
currencies = { version = "0.4", package = "orml-currencies", default-features = false }
tokens = { version = "0.4", package = "orml-tokens", default-features = false }
traits = { version = "0.4", package = "orml-traits", default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
permissions = { path = "../permissions", default-features = false }
hex-literal = { version = "0.3.1", optional = true }

[dev-dependencies]
common = { path = "../../common", default-features = false, features = ["test"] }
sp-core = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-arithmetic/std',
    'sp-std/std',
    'sp-io/std',
    'currencies/std',
    'tokens/std',
    'traits/std',
    'assets/std',
    'common/std',
    'permissions/std',
]
