[package]
description = 'Pallet for creation of DEXes, managing their specific parameters and ownership.'
version = '0.2.0'
name = 'dex-manager'
edition = '2021'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-arithmetic = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
common = { path = "../../common", default-features = false }
permissions = { path = "../permissions", default-features = false }
hex-literal = { version = "0.4.1", optional = true }

[dev-dependencies]
common = { path = "../../common", default-features = false, features = [
    "test",
] }
assets = { path = "../assets", default-features = false }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    "scale-info/std",
    'serde/std',
    'assets/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-arithmetic/std',
    'sp-std/std',
    'sp-io/std',
    'currencies/std',
    'tokens/std',
    'traits/std',
    'common/std',
    'permissions/std',
]

try-runtime = ["frame-support/try-runtime"]
