[package]
description = 'Pallet for creation of DEXes, managing their specific parameters and ownership.'
version = '0.2.0'
name = 'dex-manager'
edition = '2021'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.20" }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
currencies = { workspace = true, default-features = false }
tokens = { workspace = true, default-features = false }
traits = { workspace = true, default-features = false }
common = { path = "../../common", default-features = false }
permissions = { path = "../permissions", default-features = false }

[dev-dependencies]
common = { path = "../../common", default-features = false, features = [
    "test",
] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }

[features]
default = ['std']
std = [
    'assets/std',
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-std/std',
    'sp-io/std',
    'currencies/std',
    'tokens/std',
    'traits/std',
    'common/std',
    'permissions/std',
]

wip = []

try-runtime = ["frame-support/try-runtime"]
